# fidem

./: Justfile  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_ephemeral_command.py
src/fidem/: environment.py  intents.py  operation_engine.py  operations.py  serialization.py  serializer.py  testing.py
tests/: intents.py  operations.py  stubs.py  test_environment.py
tests/unit/: test_environment.py  test_intents.py  test_operation_engine.py
