[project]
name = "fidem"
version = "0.1.0"
description = "Fidem is a framework for building consistent, fault‑tolerant applications. Replace chaos with order—explicit contracts, durable execution, and complete observability out of the box."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Maxim Sakhno", email = "maxim.sakhno@gmail.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Distributed Computing",
    "Topic :: Database",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/maximsakhno/fidem"
Homepage = "https://github.com/maximsakhno/fidem"
Issues = "https://github.com/maximsakhno/fidem/issues"
Documentation = "https://github.com/maximsakhno/fidem#readme"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "prek>=0.3.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p",
    "no:cacheprovider",
    "--cov=src/fidem",
    "--cov-branch",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
